版本3/temp.txt
book@100ask:~/project/lesson10/lesson6$ make
arm-buildroot-linux-gnueabihf-g++ -Wall -Wextra -Werror -O2 -DNDEBUG -I include/test/ -I include/common/ -I include/mqttclient -I include/ -I include/common/log -I include/mqtt -I ./include/platform/linux -I ./include/network -c mqtt_bridge.cpp -o mqtt_bridge.o
mqtt_bridge.cpp: In function ‘void publish_image_http(const char*)’:
mqtt_bridge.cpp:577:5: error: ‘publish_image’ was not declared in this scope
     publish_image(event_type);
     ^~~~~~~~~~~~~
mqtt_bridge.cpp:577:5: note: suggested alternative: ‘publish_image_http’
     publish_image(event_type);
     ^~~~~~~~~~~~~
     publish_image_http
Makefile:89: recipe for target 'mqtt_bridge.o' failed
make: *** [mqtt_bridge.o] Error 1